# rpclib

./: README.md
dependencies/include/: asio.hpp
dependencies/include/asio/: associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  coroutine.hpp  deadline_timer.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  execution_context.hpp  executor.hpp  (+38 more)
dependencies/include/asio/detail/: array.hpp  atomic_count.hpp  base_from_completion_cond.hpp  bind_handler.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  config.hpp  cstddef.hpp  (+177 more)
doc/pages/: internals.md
examples/server/: CMakeLists.txt
examples/server_run_for/: CMakeLists.txt  main.cc
include/rpc/: server.h
include/rpc/detail/: async_writer.h  server_session.h
lib/rpc/: client.cc  server.cc
lib/rpc/detail/: server_session.cc
(+181 files in other folders)
